修改注册流程界面

--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -107,11 +107,11 @@
 		<div class="mui-content">
 			<form id='login-form' class="mui-input-group">
 				<div class="mui-input-row">
-					<label>账号</label>
+					<label style="font-size: 15px;">账号</label>
 					<input id='account' type="text" class="mui-input-clear mui-input" placeholder="请输入账号">
 				</div>
 				<div class="mui-input-row">
-					<label>密码</label>
+					<label style="font-size: 15px;">密码</label>
 					<input id='password' type="password" class="mui-input-clear mui-input" placeholder="请输入密码">
 				</div>
 			</form>
@@ -126,15 +126,15 @@
 				</ul>
 			</form>-->
 			<div class="mui-content-padded">
-				<button id='login' class="mui-btn mui-btn-block mui-btn-primary">登录</button>
+				<button id='login' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none;">登录</button>
 				<div class="link-area">
-					<a id='reg'>注册账号</a>
+					<a id='reg' style="color: #333333;">注册账号</a>
 					<!--<span class="spliter">|</span>
 					<a id='forgetPassword'>忘记密码</a>-->
 				</div>
 			</div>
 			<div class="link-area oauth-area">
-				<a id="more" href="#sheet">遇到登录问题？</a>
+				<a id="more" href="#sheet" style="color: #333333;">遇到登录问题？</a>
 			</div>
 
 			<!--<div class="mui-content-padded oauth-area">
