--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -12,31 +12,31 @@
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a id='back' class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
-			<a class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="font-size: 18px;">取消</a>
+			<a class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="font-size: 15px;">取消</a>
 			<h1 id="navTitle" class="mui-title">修改密码</h1>
 		</header>
 		<div class="mui-content">
 			<br/>
 			<form class="mui-input-group">
 				<div id="old-password" class="mui-input-row" style="display: none;">
-					<label>原密码</label>
+					<label style="font-size: 15px;">原密码</label>
 					<input type="password" id="phoneNumber" placeholder="请输入原密码">
 				</div>
 				<div class="mui-input-row">
-					<label>新密码</label>
+					<label style="font-size: 15px;">新密码</label>
 					<input type="password" id="password0" placeholder="输入新密码">
 				</div>
 				<div class="mui-input-row">
-					<label>确认密码</label>
+					<label style="font-size: 15px;">确认密码</label>
 					<input type="password" id="password1" placeholder="重新输入新密码">
 				</div>
 				<div class="mui-input-row" id="unickName0">
-					<label>昵称</label>
+					<label style="font-size: 15px;">昵称</label>
 					<input type="text" id="unickName" placeholder="请输入昵称">
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='modifypassword' class="mui-btn mui-btn-block mui-btn-primary">修改密码</button>
+				<button id='modifypassword' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none;">修改密码</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
