--- a/JiaoBaoYun-hb/html/register/register_phoneNumber.html
+++ b/JiaoBaoYun-hb/html/register/register_phoneNumber.html
@@ -20,12 +20,12 @@
 			</div>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label>手机号</label>
+					<label style="font-size: 15px;">手机号</label>
 					<input type="text" id="phoneNumber" placeholder="请输入手机号 ">
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='register' class="mui-btn mui-btn-block mui-btn-primary">注册</button>
+				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none;">注册</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
