--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -20,17 +20,17 @@
 			</div>
 			<form class="mui-input-group">
 				<div class="mui-input-row">
-					<label>手机号</label>
-					<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly">
+					<label style="font-size: 15px;">手机号</label>
+					<input type="text" id="phoneNumber" placeholder="请输入手机号" readonly="readonly" style="color: gray;">
 					<input type="text" id="phoneNumber" placeholder="请输入手机号">
 				</div>
 				<div class="mui-input-row">
-					<label>验证码</label>
+					<label style="font-size: 15px;">验证码</label>
 					<input type="text" id="yanzheng" placeholder="请输入验证码">
 				</div>
 			</form>
 			<div class="mui-content-padded">
-				<button id='register' class="mui-btn mui-btn-block mui-btn-primary">提交</button>
+				<button id='register' class="mui-btn mui-btn-block mui-btn-primary" style="background: #13b7f6; border: none;">提交</button>
 			</div>
 		</div>
 		<script src="../../js/mui.min.js" type="text/javascript" charset="utf-8"></script>
