--- a/JiaoBaoYun-hb/html/mine/apply-group.html
+++ b/JiaoBaoYun-hb/html/mine/apply-group.html
@@ -24,7 +24,7 @@
 				<div class="search-form">
 					<div class="mui-input-row mui-search">
 						<input id="search-group" type="search" class="mui-input-clear search-input" placeholder="通过群成员手机号或用户名搜索群">
-						<button id="search-btn" type="submit" class="mui-btn mui-btn-blue search-btn">搜索</button>
+						<input id="search-btn" type="submit" class="search-btn" value="搜索"></input>
 					</div>
 				</div>
 				<ul id="groups-container" class="mui-table-view">
