--- a/JiaoBaoYun-hb/html/mine/setting.html
+++ b/JiaoBaoYun-hb/html/mine/setting.html
@@ -18,17 +18,17 @@
 		<div class="mui-content">
 			<ul class="mui-table-view">
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" id="yinsi">
+					<a class="mui-navigate-right" id="yinsi"  style="font-size: 15px;">
 						隐私
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a id="change-passwords" class="mui-navigate-right">
+					<a id="change-passwords" class="mui-navigate-right" style="font-size: 15px;">
 						修改密码
 					</a>
 				</li>
 				<li class="mui-table-view-cell">
-					<a class="mui-navigate-right" id="quit">
+					<a class="mui-navigate-right" id="quit" style="font-size: 15px;">
 						退出登录
 					</a>
 				</li>
