--- a/JiaoBaoYun-hb/html/index/mine.html
+++ b/JiaoBaoYun-hb/html/index/mine.html
@@ -16,62 +16,63 @@
 	</head>
 
 	<body>
-		<div class="mui-content">
+		<div class="mui-scroll-wrapper mui-content">
+			<div class="mui-scroll">
+				<div id="title" class="title">
+					<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
+					<h4 id="uname">暂无昵称</h4>
+					<p id="utext">暂无签名</p>
+				</div>
 
-			<div id="title" class="title">
-				<img id="uimg" style="height: 60px;width: 60px;" src="../../image/utils/default_personalimage.png" class="head-portrait" /><br />
-				<h4 id="uname">暂无昵称</h4>
-				<p id="utext">暂无签名</p>
+				<!--各项-->
+				<ul class="mui-table-view mui-table-view-chevron">
+					<li class="mui-table-view-cell" position='1'>
+						<a class="mui-navigate-right" open-type="common">
+							<span class="mui-icon iconfont icon-group"></span> 群管理
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='0'>
+						<a class="mui-navigate-right" open-type="common">
+							<span class="mui-icon iconfont icon-qunziliao"></span> 人员资料
+						</a>
+					</li>
+
+					<li class="mui-table-view-cell" position='2'>
+						<a class="mui-navigate-right" open-type="common">
+							<span class="mui-icon iconfont icon-jiaqun"></span> 申请加入群
+						</a>
+					</li>
+					<li class="mui-table-view-divider"></li>
+					<li class="mui-table-view-cell" position='3'>
+						<a class="mui-navigate-right">
+							<span class="mui-icon iconfont icon-xiaoxi"></span> 新消息
+							<span id="news-amount" class="mui-badge mui-badge-red">数字</span>
+						</a>
+					</li>
+
+					<li class="mui-table-view-cell" position='4'>
+						<a class="mui-navigate-right">
+							<span class="mui-icon iconfont icon-zone"></span> 我的空间
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='5'>
+						<a class="mui-navigate-right">
+							<span class="mui-icon iconfont icon-jifen"></span> 积分
+						</a>
+					</li>
+					<li class="mui-table-view-divider"></li>
+					<li class="mui-table-view-cell" position='6'>
+						<a class="mui-navigate-right">
+							<span class="mui-icon iconfont icon-shezhi about-icon"></span> 设置
+						</a>
+					</li>
+					<li class="mui-table-view-cell" position='7'>
+						<a class="mui-navigate-right">
+							<span class="mui-icon iconfont icon-about about-icon"></span> 关于
+						</a>
+					</li>
+				</ul>
 			</div>
-
-			<!--各项-->
-			<ul class="mui-table-view mui-table-view-chevron">
-				<li class="mui-table-view-cell" position='1'>
-					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-group"></span> 群管理
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='0'>
-					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-qunziliao"></span> 人员资料
-					</a>
-				</li>
-				
-				<li class="mui-table-view-cell" position='2'>
-					<a class="mui-navigate-right" open-type="common">
-						<span class="mui-icon iconfont icon-jiaqun"></span> 申请加入群
-					</a>
-				</li>
-				<li class="mui-table-view-divider"></li>
-				<li class="mui-table-view-cell" position='3'>
-					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-newmessage"></span> 新消息
-						<span id="news-amount" class="mui-badge mui-badge-red">数字</span>
-					</a>
-				</li>
-
-				<li class="mui-table-view-cell" position='4'>
-					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-zone"></span> 我的空间
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='5'>
-					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-jifen"></span> 积分
-					</a>
-				</li>
-				<li class="mui-table-view-divider"></li>
-				<li class="mui-table-view-cell" position='6'>
-					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-shezhi about-icon"></span> 设置
-					</a>
-				</li>
-				<li class="mui-table-view-cell" position='7'>
-					<a class="mui-navigate-right">
-						<span class="mui-icon iconfont icon-about about-icon"></span> 关于
-					</a>
-				</li>
-			</ul>
 		</div>
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/utils/events.js"></script>
@@ -83,14 +84,19 @@
 					menubutton: false
 				}
 			});
+			mui('.mui-scroll-wrapper').scroll({
+				 indicators: true, //是否显示滚动条
+			});
 			//获得侧滑主窗口webview对象
 			var main = null;
 			var info = null;
 			mui.plusReady(function() {
-				main = plus.webview.currentWebview().opener();
-				//获取个人信息
-				//personalInfo = myStorage.getItem(storageKeyName.PERSONALINFO);
 
+				var curPage = plus.webview.currentWebview();
+				main = curPage.opener();
+				curPage.addEventListener("show", function(e) {
+					mui('.mui-scroll-wrapper').scroll().scrollTo(0,0,100);//100毫秒滚动到顶
+				})
 				//展示个人信息
 				getInfo();
 				//				events.jumpPage(document.getElementById('title'),'mine/account-info.html');
@@ -128,8 +134,8 @@
 							break;
 							//申请加入群
 						case 2:
-						var recordPage=plus.webview.getWebviewById('/html/mine/apply-record.html')
-							if(recordPage){
+							var recordPage = plus.webview.getWebviewById('/html/mine/apply-record.html')
+							if(recordPage) {
 								recordPage.reload(true);
 							}
 							events.openNewWindow('/html/mine/apply-record.html');
@@ -152,7 +158,7 @@
 							//关于
 						case 7:
 							mui.toast('施工中,请稍候...');
-//							events.openNewWindow('/html/mine/group-info.html')
+							//							events.openNewWindow('/html/mine/group-info.html')
 							break;
 
 						default:
@@ -173,13 +179,13 @@
 				info = myStorage.getItem(storageKeyName.PERSONALINFO);
 				console.log('我的界面获取的个人信息：' + JSON.stringify(info))
 				if(info.uimg) {
-//					var myDate = new Date();
+					//					var myDate = new Date();
 					document.getElementById('uimg').src = info.uimg;
 				} else {
 					document.getElementById('uimg').src = '../../image/utils/default_personalimage.png';
 				}
-				
-					document.getElementById('uname').innerText = info.unick?info.unick:"暂无昵称";
+
+				document.getElementById('uname').innerText = info.unick ? info.unick : "暂无昵称";
 				if(info.utxt) {
 					document.getElementById('utext').innerText = info.utxt;
 				} else {
