--- a/JiaoBaoYun-hb/html/cloud/record_student_main.html
+++ b/JiaoBaoYun-hb/html/cloud/record_student_main.html
@@ -17,7 +17,7 @@
 		<header class="mui-bar mui-bar-nav">
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 id="title" class="mui-title" style="text-align: left;"></h1>
-			<!--<a id="add" class="mui-icon mui-icon-plus mui-pull-right"></a>-->
+			<a id="add" class="mui-icon mui-icon-plus mui-pull-right" style="display: none;"></a>
 		</header>
 		<div class="mui-content"></div>
 	</body>
@@ -68,7 +68,7 @@
 				events.openNewWindowWithData('record_student_add.html', {
 					data: data
 				});
-			})
+			});
 		})
 	</script>
 
