图片，视频，音频

--- a/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
+++ b/JiaoBaoYun-hb/html/cloud/app_keeprecord.html
@@ -302,10 +302,10 @@
 
 				//监听点击成员
 				mui('.mui-content').on('tap', '.mui-table-view-cell', function() {
-					console.log('mui-table-view-cell-id:' + this.getAttribute('id'));
-					console.log('mui-table-view-cell-gid:' + this.getAttribute('data-gid'));
-					console.log('mui-table-view-cell-stuid:' + this.getAttribute('data-stuid'));
-					console.log('mui-table-view-cell-stuname:' + this.getAttribute('data-stuname'));
+					//console.log('mui-table-view-cell-id:' + this.getAttribute('id'));
+					//console.log('mui-table-view-cell-gid:' + this.getAttribute('data-gid'));
+					//console.log('mui-table-view-cell-stuid:' + this.getAttribute('data-stuid'));
+					//console.log('mui-table-view-cell-stuname:' + this.getAttribute('data-stuname'));
 					var gid = this.getAttribute('data-gid'); //群id
 					var gname = ''; //群名称
 					var stuid = this.getAttribute('data-stuid'); //资料id
