--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -10,9 +10,11 @@
 		<link rel="stylesheet" href="../../css/mui.min.css">
 		<link rel="stylesheet" href="../../css/utils/common.css" />
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
+		<link rel="stylesheet" href="../../css/utils/MultiMedia.css" />
 
 		<script src="../../js/mui.min.js"></script>
 		<script type="text/javascript" src="../../js/publicProtocol.js"></script>
+		<script type="text/javascript" src="../../js/utils/MultiMedia.js" ></script>
 
 		<style>
 			body,
@@ -85,14 +87,6 @@
 			.mui-checkbox input[type=checkbox]:before {
 				font-size: 25px;
 			}
-
-			.iconfont {
-				font-size: 30px;
-				/*background: red;*/
-				margin-left: 2%;
-				color: #999999;
-			}
-
 			.mui-media-body {
 				margin-top: 10px;
 				margin-bottom: 5px;
@@ -214,11 +208,14 @@
 						</div>
 						<input id="input_call" type="text" class="mui-input-clear" placeholder="备注" maxlength="20" style="margin-bottom: 10px;">
 					</div>
-					<div id="record" style="background: white;margin-top: 10px;padding-top: 10px;">
+					<div id="record" style="background: white;margin-top: 10px;padding-top: 10px;padding-bottom: 10px;">
 						<textarea id="textarea_record" rows="4" placeholder="记事" maxlength="500" style="margin-bottom: 4px;"></textarea>
 						<!--<span class="mui-icon iconfont icon-yuyin"></span>-->
 						<!--<span class="mui-icon iconfont icon-xiangji"></span>-->
 						<!--<span class="mui-icon iconfont icon-shipin"></span>-->
+						<div id="MultiMedia">
+
+						</div>
 					</div>
 				</ul>
 			</div>
@@ -265,7 +262,7 @@
 				var call_input = ''; //记录点到的备注
 				var commit = false; //是否允许提交
 				var commitNum = 0; //记录发布请求的次数
-
+				MultiMedia.addElement(document.getElementById("MultiMedia"));
 				//---获取数据---start---
 
 				getNotes(1, 10);
