调整index，新建科教，展现，求知

--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" href="../../css/iconfont/iconfont.css" />
 		<link rel="stylesheet" href="../../css/home/index.css" />
 		<style type="text/css">
-			.mui-bar-tab .mui-tab-item.mui-active{
+			.mui-bar-tab .mui-tab-item.mui-active {
 				color: #00a5e01;
 			}
 		</style>
@@ -27,17 +27,21 @@
 		<!--底部选项卡（.mui-bar-tab）-->
 
 		<nav class="mui-bar mui-bar-tab ">
-				<a id="defaultTab" class="mui-tab-item mui-active" href="../quan/tab-zone.html">
-				<span class="mui-icon iconfont icon-jiaoxiaoquan"></span>
-				<span class="mui-tab-label">家校圈</span>
-			</a>
-			<a id="tabclass" class="mui-tab-item" href="../tab_knowledge.html">
-				<span class="mui-icon iconfont icon-wenda"></span>
-				<span class="mui-tab-label">问答</span>
-			</a>
-			<a class="mui-tab-item" href="../cloud/cloud_home.html">
+			<a id="defaultTab" class="mui-tab-item mui-active" href="../cloud/cloud_home.html">
 				<span class="mui-icon iconfont icon-yunpan1"></span>
-				<span class="mui-tab-label">云盘</span>
+				<span class="mui-tab-label">首页</span>
+			</a>
+			<a id="tabclass" class="mui-tab-item" href="../scienceeducation/scienceeducation_home.html">
+				<span class="mui-icon iconfont icon-wenda"></span>
+				<span class="mui-tab-label">科教</span>
+			</a>
+			<a class="mui-tab-item" href="../show/show_home.html">
+				<span class="mui-icon iconfont icon-jiaoxiaoquan"></span>
+				<span class="mui-tab-label">展现</span>
+			</a>
+			<a class="mui-tab-item" href="../qiuzhi/qiuzhi_home.html">
+				<span class="mui-icon iconfont icon-wenda"></span>
+				<span class="mui-tab-label">求知</span>
 			</a>
 		</nav>
 	</body>
@@ -47,6 +51,5 @@
 	<script type="text/javascript" src="../../js/publicHomeworkProtocol.js"></script>
 	<script type="text/javascript" src="../../js/index.js"></script>
 	<script src="../../js/main/slide_navigation.js"></script>
-
 
 </html>
