--- a/JiaoBaoYun-hb/html/register/modify_password.html
+++ b/JiaoBaoYun-hb/html/register/modify_password.html
@@ -12,8 +12,8 @@
 	<body>
 		<header id="header" class="mui-bar mui-bar-nav">
 			<a id='back' class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left" style="display: none;"></a>
-			<a class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="font-size: 15px;">取消</a>
-			<h1 id="navTitle" class="mui-title">修改密码</h1>
+			<h1 id="navTitle" class="mui-title"  style="color: white;">修改密码</h1>
+			<h1 class="mui-icon mui-icon-right-nav mui-pull-right" id="cancelBtn" style="text-align: right;right: 10px;font-size: 15px;">取消</h1>
 		</header>
 		<div class="mui-content">
 			<br/>
