--- a/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
+++ b/JiaoBaoYun-hb/html/cloud/keeprecord_callorrecord_sub.html
@@ -90,11 +90,14 @@
 			.mui-media-body {
 				margin-top: 10px;
 				margin-bottom: 5px;
+				color: #323232;
 			}
 
 			.time {
+				/*height: 51px;*/
 				text-align: center;
-				border-bottom: 1px solid #D9D9D9;
+				border-bottom: 1px solid #e1e1e1;
+				color: #909090;
 			}
 		</style>
 	</head>
