--- a/JiaoBaoYun-hb/html/index/index.html
+++ b/JiaoBaoYun-hb/html/index/index.html
@@ -32,11 +32,11 @@
 				<span class="mui-tab-label">首页</span>
 			</a>
 			<a id="tabclass" class="mui-tab-item" href="../scienceeducation/scienceeducation_home.html">
-				<span class="mui-icon iconfont icon-wenda"></span>
+				<span class="mui-icon iconfont icon-jiaoyu"></span>
 				<span class="mui-tab-label">科教</span>
 			</a>
 			<a class="mui-tab-item" href="../show/show_home.html">
-				<span class="mui-icon iconfont icon-jiaoxiaoquan"></span>
+				<span class="mui-icon iconfont icon-dongtai1"></span>
 				<span class="mui-tab-label">展现</span>
 			</a>
 			<a class="mui-tab-item" href="../qiuzhi/qiuzhi_home.html">
